redmineID #4143 and redmineID #1379 - Updated fop to use the new junit macrodefs.