@@ -57,7 +57,11 @@
   <target name="clean" depends="init" description="Remove build artifacts">
     <delete dir="${build.dir}"/>
     <delete dir="${tests.output.dir}"/>
-
+    <delete>
+      <fileset dir="${basedir}">
+        <include name="cobertura.ser"/>
+      </fileset>
+    </delete>
   </target>
 
   <target name="prepare" depends="init, prepare-ivy">
@@ -107,7 +111,7 @@
             <group title="Interlok PDF Transformation" packages="com.adaptris.core.transform.pdf:com.adaptris.core.transform.pdf.*"/>
         </grouping>
       </groups>
-    </adapter:ydoc-javadoc-creator>  
+    </adapter:ydoc-javadoc-creator>
   </target>
 
   <!-- Perform a release -->
@@ -150,36 +154,18 @@
   </target>
 
 
-  <target name="test" depends="init.tests,junit" description="run tests">
-    <junitreport todir="${tests.output.dir}">
-      <fileset dir="${tests.output.dir}">
-        <include name="TEST-*.xml"/>
-      </fileset>
-      <report format="frames" todir="${html.tests.output.dir}"/>
-    </junitreport>
+  <target name="test" depends="run-tests" description="run tests">
+    <adapter:test-reports basedir="${tests.output.dir}" reportdir="${html.tests.output.dir}"/>
     <fail message="JUNIT tests failed, check output in ${tests.output.dir}" if="junit.failed"/>
   </target>
 
-  <target name="junit" depends="init.tests">
-    <junit printsummary="true" fork="yes" failureproperty="junit.failed" showoutput="no" forkmode="once">
-      <jvmarg value="-XX:-UseSplitVerifier"/>
-      <jvmarg value="-XX:+CMSClassUnloadingEnabled"/>
-      <jvmarg value="-XX:+UseConcMarkSweepGC"/>
-      <jvmarg value="-XX:+UseParNewGC"/>
-      <formatter type="xml"/>
-      <batchtest todir="${tests.output.dir}">
-        <fileset dir="${testsrc.dir}">
-          <include name="${junit.test.classes}"/>
-          <exclude name="${junit.test.exclude.classes}"/>
-          <exclude name="**/AllTests.java"/>
-        </fileset>
-      </batchtest>
-      <classpath id="classpath.runtests">
-        <path refid="main.classpath"/>
-        <pathelement path="${classes.build.dir}"/>
-        <pathelement path="${testclasses.build.dir}"/>
-      </classpath>
-    </junit>
+  <target name="run-tests" depends="init.tests">
+    <adapter:execute-tests printsummary="true" fork="yes" showoutput="no" forkmode="once"/>
   </target>
+
+  <target name="test-no-reports" depends="run-tests" description="Run Tests with No reports">
+    <fail message="JUNIT tests failed, check output in ${tests.output.dir}" if="junit.failed"/>
+  </target>
+
 
 </project>
